--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,16 @@
   <version>0.0.1-SNAPSHOT</version>
 </dependency>
     
+    
+    <dependency>
+	<groupId>mysql</groupId>
+	<artifactId>mysql-connector-java</artifactId>
+	<version>5.1.38</version>
+</dependency>
+    
+    
+    
+    
   </dependencies>
   
   
