--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 
-
 		</dependency>
 
 
@@ -21,6 +20,13 @@
 			<groupId>org.apache.struts</groupId>
 			<artifactId>struts2-core</artifactId>
 			<version>2.5-BETA3</version>
+			<exclusions>
+			  <exclusion>
+			    <groupId>javassist</groupId>
+			  <artifactId>javassist</artifactId>
+			
+			  </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -51,7 +57,6 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.5</version>
 		</dependency>
-
 
 	</dependencies>
 
